--- a/styles/main.css
+++ b/styles/main.css
@@ -1,25 +1,34 @@
-*{
+* {
     box-sizing: border-box;
 }
 
-body{
+body {
     background-color: lightblue;
 }
 
-.canvas-container{
+.canvas-container {
     background-color: grey;
     width: 100vw;
     height: 500px;
     border: 1px solid red;
 }
 
-canvas{
+canvas {
     display: block;
     margin: 20px auto;
     border: 1px solid black;
-
 }
 
-h1{
+h1 {
     text-align: center;
+}
+
+.gallery-container img {
+    height: 200px;
+    width: 200px;
+    margin: 10px;
+}
+
+.editor-container{
+    padding-top: 20px;
 }
