--- a/styles/main.css
+++ b/styles/main.css
@@ -187,6 +187,10 @@ a:hover {
     display: none;
 }
 
+.canvas-style {
+    padding: 1.25rem;
+}
+
 /* Meme Editor */
 
 .editor-container {
@@ -204,7 +208,28 @@ a:hover {
 
 .editor-buttons {
     border-radius: 12px;
-    padding: 0.625rem 0.75rem;
+    /* margin-right: 1.25rem; */
+    background-color: white;
+    height: 3.75rem;
+    width: 3.75rem;
+}
+
+.first-buttons-bar {
+    margin-top: 0.625rem;
+}
+
+.second-buttons-bar {
+    margin-top: 2.5rem;
+}
+
+.third-buttons-bar {
+    margin-top: 0.625rem;
+}
+
+.font-selector {
+    border-radius: 12px;
+    width: 13.625rem;
+    height: 3.75rem;
 }
 
 /* Gallery */
@@ -251,7 +276,7 @@ a:hover {
 /* Footer */
 
 .main-footer {
-    /* background-color: #f8f8f8; */
+    background-color: #ff7f00;
     padding: 5rem;
     border: 1px solid #e1e0e0;
 }
@@ -266,10 +291,6 @@ a:hover {
 
 .copyright {
     font-size: 0.8125rem;
-}
-
-.bolded-span {
-    font-family: lato-bold;
 }
 
 .social-li {
